--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:text="@string/app_name"
+        android:text="Cricket Quiz"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="25sp"
